# aci-chain

./: Cargo.toml  README.md
node/: Cargo.toml
node/cli/: Cargo.toml
node/cli/src/: command.rs  lib.rs
node/rpc/: Cargo.toml
node/rpc/src/: hadron.rs  lib.rs  quark.rs
node/service/: Cargo.toml
node/service/res/: hadron.json  hadron_test.json  quark.json
node/service/src/: client.rs  lib.rs
node/service/src/chain_spec/: hadron.rs  mod.rs  quark.rs
node/service/src/service/: hadron.rs  mod.rs  quark.rs
node/src/: main.rs
pallets/assets/: Cargo.toml
pallets/assets/src/: benchmarking.rs  lib.rs  weights.rs
pallets/auction/: Cargo.toml
pallets/auction/src/: default_weight.rs  lib.rs
pallets/blindbox/: Cargo.toml
pallets/blindbox/src/: lib.rs  migration.rs
pallets/bridge/: Cargo.toml
pallets/bridge/src/: lib.rs  types.rs
pallets/common/: Cargo.toml
pallets/common/src/: currency.rs  impls.rs  lib.rs
pallets/deac/: Cargo.toml
pallets/deac/src/: lib.rs
pallets/multi/: Cargo.toml
pallets/multi/src/: lib.rs  migration.rs
pallets/names/: Cargo.toml
pallets/names/src/: lib.rs  tests.rs
pallets/rewards/: Cargo.toml
pallets/rewards/src/: benchmarking.rs  default_weights.rs  lib.rs
pallets/staking/: Cargo.toml
pallets/staking/rpc/: Cargo.toml
pallets/staking/rpc/runtime-api/: Cargo.toml
pallets/staking/src/: lib.rs
pallets/trade/: Cargo.toml
pallets/trade/src/: default_weight.rs  lib.rs
pallets/validator-set/: Cargo.toml
pallets/validator-set/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/hadron/: Cargo.toml  types.json
runtime/hadron/src/: constants.rs  lib.rs
runtime/hadron/src/configs/: frame_system_config.rs  mod.rs  orml_currencies_config.rs  orml_tokens_config.rs  pallet_aura_config.rs  pallet_authorship_config.rs  pallet_balances_config.rs  pallet_blindbox_config.rs  pallet_bridge_config.rs  pallet_elections_phragmen_config.rs  pallet_ethereum_config.rs  pallet_evm_config.rs  pallet_identity_config.rs  pallet_multi_config.rs  pallet_multisig_config.rs  pallet_nicks_config.rs  pallet_proxy_config.rs  pallet_rewards_config.rs  pallet_scheduler_config.rs  pallet_timestamp_config.rs  pallet_treasury_config.rs  pallet_vesting_config.rs
runtime/hadron/src/weights/: mod.rs  orml_tokens.rs  pallet_balances.rs  pallet_collective.rs  pallet_elections_phragmen.rs  pallet_indices.rs  pallet_scheduler.rs  pallet_session.rs  pallet_treasury.rs
runtime/quark/: Cargo.toml  types.json
runtime/quark/src/: lib.rs
runtime/quark/src/configs/: frame_system_config.rs  mod.rs  pallet_assets_config.rs  pallet_balances_config.rs  pallet_bounties_config.rs  pallet_collective_config.rs  pallet_contracts_config.rs  pallet_deac_config.rs  pallet_grandpa_config.rs  pallet_indices_config.rs  pallet_membership_config.rs  pallet_names_config.rs  pallet_nicks_config.rs  pallet_proxy_config.rs  pallet_recovery_config.rs  pallet_rewards_config.rs  pallet_session_config.rs  pallet_society_config.rs  pallet_sudo_config.rs  pallet_transaction_payment_config.rs  pallet_utility_config.rs  pallet_validator_set_config.rs
runtime/quark/src/weights/: frame_system.rs  mod.rs  pallet_identity.rs  pallet_multisig.rs  pallet_proxy.rs  pallet_rewards.rs  pallet_timestamp.rs  pallet_utility.rs
support/: Cargo.toml
support/src/: lib.rs
