[package]
name = "aci-cli"
authors = ["hercules-network"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
structopt = "0.3.8"
log = { version = "0.4.11" }

# aci
aci-service = { path = "../service", default-features = false }
aci-primitives = { path = "../../primitives" }

# substratem
sp-core = { version = "3.0.0", optional = true }
sc-cli = { version = "0.9.0", optional = true }
sc-service = { version = "0.9.0", optional = true }
sc-executor = { version = "0.9.0", features = ["wasmtime"] }
frame-benchmarking-cli = { version = "3.0.0", optional = true }
sp-trie = { version = "3.0.0", default-features = false }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", default-features = false }

[features]
default = ["wasmtime", "cli"]
trie-memory-tracker = ["sp-trie/memory-tracker"]

wasmtime = [
    "sc-cli/wasmtime",
    "trie-memory-tracker",
]

cli = [
    "aci-service/full-node",
    "sp-core",
    "sc-cli",
    "sc-service",
    "frame-benchmarking-cli",
]
runtime-benchmarks = [ "aci-service/runtime-benchmarks" ]