[package]
name = "aci-rpc"
authors = ["hercules-network"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "15.0.0"
futures = "0.3.4"

# aci
aci-primitives = { path = "../../primitives" }

# rpc
substrate-frame-rpc-system = { version = "3.0.0" }
pallet-transaction-payment-rpc = { version = "3.0.0" }

pallet-staking-rpc = { path = "../../pallets/staking/rpc" }
pallet-contracts-rpc = { version = "3.0.0" }

# substrate client
sc-cli = { version = "0.9.0", features = ["wasmtime"] }
sc-executor = { version = "0.9.0", features = ["wasmtime"] }
sc-service = { version = "0.9.0", features = ["wasmtime"] }
sc-transaction-pool = { version = "3.0.0" }
sc-consensus-aura = { version = "0.9.0" }
sc-consensus = { version = "0.9.0" }
sc-consensus-manual-seal = { version = "0.9.0" }
sc-finality-grandpa = { version = "0.9.0" }
sc-client-api = { version = "3.0.0" }
sc-rpc = { version = "3.0.0" }
sc-rpc-api = { version = "0.9.0" }
sc-telemetry = { version = "3.0.0" }
sc-basic-authorship = { version = "0.9.0" }
sc-network = { version = "0.9.0" }
sc-transaction-graph = { version = "3.0.0" }

# substrate primitives
sp-core = { version = "3.0.0" }
sp-inherents = { version = "3.0.0" }
sp-transaction-pool = { version = "3.0.0"}
sp-consensus-aura = { version = "0.9.0" }
sp-consensus = { version = "0.9.0" }
sp-finality-grandpa = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
sp-api = { version = "3.0.0" }
sp-blockchain = { version = "3.0.0" }
sp-block-builder = { version = "3.0.0" }

# EVM
aci-hadron-runtime = { path = "../../runtime/hadron" }
ac-rpc = { git = "https://github.com/hercules-network/aci-evm.git" }
ap-rpc = { git = "https://github.com/hercules-network/aci-evm.git" }
ac-rpc-core = { git = "https://github.com/hercules-network/aci-evm.git" }