[package]
name = "aci-service"
authors = ["hercules-network"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.8"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = { version = "1.0.41" }
hex-literal = "0.3.1"
futures = { version = "0.3.13" }
log = { version = "0.4.11" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

# aci
aci-quark-runtime = { path = "../../runtime/quark" }
aci-hadron-runtime = { path = "../../runtime/hadron" }
aci-rpc = { path = "../rpc" }
aci-primitives = { path = "../../primitives" }

# substrate client
sc-cli = { version = "0.9.0", features = ["wasmtime"] }
sc-executor = { version = "0.9.0", features = ["wasmtime"] }
sc-service = { version = "0.9.0", features = ["wasmtime"] }
sc-transaction-pool = { version = "3.0.0" }
sc-consensus-aura = { version = "0.9.0" }
sc-consensus = { version = "0.9.0" }
sc-finality-grandpa = { version = "0.9.0" }
sc-client-api = { version = "3.0.0" }
sc-rpc = { version = "3.0.0" }
sc-rpc-api = { version = "0.9.0" }
sc-telemetry = { version = "3.0.0" }
sc-keystore = { version = "3.0.0" }
sc-chain-spec = { version = "3.0.0" }
sc-basic-authorship = { version = "0.9.0" }

# substrate primitives
sp-core = { version = "3.0.0" }
sp-inherents = { version = "3.0.0" }
sp-transaction-pool = { version = "3.0.0"}
sp-consensus-aura = { version = "0.9.0" }
sp-consensus = { version = "0.9.0" }
sp-finality-grandpa = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
sp-api = { version = "3.0.0" }
sp-blockchain = { version = "3.0.0" }
sp-block-builder = { version = "3.0.0" }
sp-offchain = { version = "3.0.0" }
sp-session = { version = "3.0.0" }
sp-storage = { version = "3.0.0" }
sp-trie = { version = "3.0.0" }

frame-benchmarking = { version = "3.0.0" }
frame-benchmarking-cli = { version = "3.0.0" }

# pallet
substrate-frame-rpc-system = { version = "3.0.0" }
substrate-prometheus-endpoint = { version = "0.9.0" }
pallet-transaction-payment-rpc = { version = "3.0.0" }
pallet-staking-rpc = { path = "../../pallets/staking/rpc" }
pallet-contracts-rpc = { version = "3.0.0" }
pallet-contracts = { version = "3.0.0" }

# EVM
pallet-evm = { git = "https://github.com/hercules-network/aci-evm.git", default-features = false }
ac-consensus = { git = "https://github.com/hercules-network/aci-evm.git" }
ap-consensus = { git = "https://github.com/hercules-network/aci-evm.git" }
ac-rpc-core = { git = "https://github.com/hercules-network/aci-evm.git" }
ap-rpc = { git = "https://github.com/hercules-network/aci-evm.git" }

# API
frame-system-rpc-runtime-api = { version = "3.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0" }

[build-dependencies]
substrate-build-script-utils = '3.0.0'
# frame-benchmarking-cli = { version = '3.0.0', optional = true }

[features]
default = ["db", "full-node"]

db        = ["sc-service/db"]
full-node = []

dev = [
    "aci-quark-runtime/dev",
    "aci-hadron-runtime/dev",
]

runtime-benchmarks = [
    "aci-quark-runtime/runtime-benchmarks",
    "aci-hadron-runtime/runtime-benchmarks",
]