[package]
name = "pallet-bridge"
authors = ["hercules-network"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false}
sp-core = { version = "3.0.0", default-features = false }
# third-party dependencies
serde = { version = "1.0.102", features = ["derive"] }
sha3 = { version = "0.9.1", default-features = false }

pallet-balances = { version = "3.0.0", default-features = false}
pallet-timestamp = { version = "3.0.0", default-features = false}

# orml
orml-currencies = { default-features = false, version = '0.4.0' }
orml-tokens = { default-features = false, version = '0.4.0' }
orml-traits = { default-features = false, version = '0.4.0' }

aci-primitives = { default-features = false, path = "../../primitives" }

[dev-dependencies]
sp-core = { version = "3.0.0"}

[features]
default = ['std']
std = [
    'codec/std',
    'serde/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-core/std',
    'sha3/std',
    'sp-io/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
    'aci-primitives/std',
    'orml-traits/std',
    'orml-currencies/std',
    'orml-tokens/std',
]