[package]
name = "pallet-multi"
authors = ["hercules-network"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false}
sp-core = { version = "3.0.0", default-features = false }
transaction-payment = { version = "3.0.0", package = 'pallet-transaction-payment', default-features = false}
pallet-names = { path = "../names", default-features = false}
# third-party dependencies
serde = { version = "1.0.102", features = ["derive"] }
sha3 = { version = "0.9.1", default-features = false }

# orml
orml-currencies = { default-features = false, version = '0.4.0' }
orml-tokens = { default-features = false, version = '0.4.0' }
orml-traits = { default-features = false, version = '0.4.0' }

support = { package = "aci-support",  path = "../../support", default-features = false }
aci-primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { version = "3.0.0"}
pallet-balances = { version = "3.0.0"}


[features]
default = ['std']
std = [
    'codec/std',
    "serde/std",
    'frame-support/std',
    'frame-system/std',
    'pallet-names/std',
    'sp-runtime/std',
    'sp-std/std',
    "sp-core/std",
    "sha3/std",
    "orml-traits/std",
    "orml-currencies/std",
    "orml-tokens/std",
    "aci-primitives/std",
]