[package]
name = "pallet-names"
authors = ["hercules-network"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
enumflags2 = { version = "0.7.1" }

sp-std = { version = "3.0.0", default-features = false}
sp-io = { version = "3.0.0", default-features = false}
sp-runtime = { version = "3.0.0", default-features = false}
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
frame-support = { version = "3.0.0", default-features = false}
frame-system = { version = "3.0.0", default-features = false}

[dev-dependencies]
sp-core = { version = "3.0.0"}
pallet-balances = { version = "3.0.0"}

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'sp-io/std',
    'sp-runtime/std',
    'frame-system/std',
]