[package]
name = "pallet-staking-rpc"
authors = ["hercules-network"]
version = "0.1.0"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"

sp-core = { version = "3.0.0" }
sp-rpc = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
sp-api = { version = "3.0.0" }
sp-blockchain = { version = "3.0.0" }

serde = { version = "1.0.102", features = ["derive"] }
pallet-staking-rpc-runtime-api = { path = "./runtime-api" }