[package]
name = "pallet-staking-rpc-runtime-api"
authors = ["hercules-network"]
version = "0.1.0"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-api = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }

serde = { version = "1.0.102", optional = true, features = ["derive"] }

[features]
default = ["std"]
std = [
	"serde",
	"sp-api/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
]